<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    android:gravity="center"
    android:soundEffectsEnabled="false">

    <Button
        android:id="@+id/easy_mode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:backgroundTint="#94459E"
        android:fontFamily="@font/audiowide"
        android:text="@string/playBtn_txt"
        android:textColor="#CCB6D1"
        app:layout_constraintBottom_toTopOf="@+id/medium_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/medium_mode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#94459E"
        android:fontFamily="@font/audiowide"
        android:text="@string/practiceBtn_txt"
        android:textColor="#CCB6D1"
        app:layout_constraintBottom_toTopOf="@+id/hard_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_mode" />

    <Button
        android:id="@+id/hard_mode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#94459E"
        android:fontFamily="@font/audiowide"
        android:text="@string/highscoreBtn_txt"
        android:textColor="#CCB6D1"
        app:layout_constraintBottom_toTopOf="@+id/custom_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medium_mode" />



</androidx.constraintlayout.widget.ConstraintLayout>

