<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <uk.ac.reading.sis05kol.MyGame.GameView
        android:id="@+id/gamearea"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3px"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/audiowide"
            android:gravity="top"
            android:text="@string/score_text"
            android:textColor="#CCB6D1"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="256dp"
            android:fontFamily="@font/audiowide"
            android:gravity="center_horizontal"
            android:text="@string/mode_ready"
            android:textColor="#CCB6D1"
            android:textSize="48sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/highScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3px"
            android:fontFamily="@font/audiowide"
            android:gravity="top"
            android:text="@string/high_score"
            android:textColor="#CCB6D1"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
